--- a/src/scss/content.scss
+++ b/src/scss/content.scss
@@ -1,14 +1,13 @@
 .content__inform{
     width: 100%;
-    height: 146px;
     padding-left: 30px;
-    padding-right: 30px;  
+    padding-right: 30px;
+    transition: height 0.3s ease-in-out;  
 }
 
 .content__about{
     font-size: 14px;
     width: 288px;
-    height: 90px;
     overflow: hidden;
     display: inline-block;
     font-family: TT Lakes;
@@ -19,6 +18,7 @@
     text-underline-position: from-font;
     text-decoration-skip-ink: none;
     text-overflow:clip;
+    transition: height 0.3s ease-in-out;
 }
 
 .content__illustration{
@@ -33,10 +33,6 @@
         justify-content: space-between;
     }
 
-    .content__inform{
-        height: 208px;
-    }
-
     .content__illustration{
         width: 360px;
         border-radius: 5%;
@@ -45,7 +41,6 @@
 
     .content__about{
         font-size: 14px;
-        height: 160px;
         width: 312px;
         overflow: hidden; 
     }
