--- a/src/scss/tipe.scss
+++ b/src/scss/tipe.scss
@@ -8,6 +8,7 @@
     border-top: solid 2px rgb(144, 248, 220);
     margin-bottom: 20px;
     width: 100%;
+    margin-top: 40px;
 } 
 
 .title--tipe{
@@ -29,7 +30,6 @@
     row-gap: 20px;
     column-gap: 40px;
     margin-bottom: 50px;
-    padding-left: 30px;
     padding-right: 30px;
 }
 
@@ -51,12 +51,13 @@
     display: none;
 }
 
-.button__viseble{
+.button__viseble--tipe{
     display: flex;
 }
 
 .table-mode--tipe {
     display: block;
+    padding-left: 30px;
 }
   
   .slider-mode--tipe {
